--- a/package.json
+++ b/package.json
@@ -105,5 +105,8 @@
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4"
   },
-  "packageManager": "yarn@3.6.0"
+  "packageManager": "yarn@3.6.0",
+  "resolutions": {
+    "@openmrs/openmrs-form-engine-lib": "portal:/Users/jamiearodi/documents/github/openmrs-form-engine-lib"
+  }
 }
